--- a/requirements.txt
+++ b/requirements.txt
@@ -26,7 +26,7 @@ MarkupSafe==2.0.1
 mutagen==1.45.1
 netaddr==0.8.0
 packaging==21.3
-Pillow==9.0.1
+Pillow>=10.2.0
 prompt_toolkit==3.0.51
 psutil==5.9.0
 pycairo==1.20.1
