--- a/requirements.txt
+++ b/requirements.txt
@@ -1,59 +1,23 @@
-amqp==5.3.1
-asgiref==3.9.1
-async-timeout==5.0.1
-beautifulsoup4==4.10.0
-billiard==4.2.1
-Brotli==1.0.9
-celery==5.5.3
-certifi==2020.6.20
-chardet==4.0.0
-click==8.2.1
-click-didyoumean==0.3.1
-click-plugins==1.1.1.2
-click-repl==0.3.0
-colorama==0.4.4
-cryptography==3.4.8
-Django==5.2.5
+Django==5.0.6
 django-jazzmin==3.0.1
-filelock==3.6.0
-httplib2==0.20.2
-idna==3.3
-IMDbPY==2021.4.18
-importlib-metadata==4.6.4
-kombu==5.5.4
-Mako==1.1.3
-MarkupSafe==2.0.1
-mutagen==1.45.1
-netaddr==0.8.0
-packaging==21.3
-Pillow>=10.2.0
-prompt_toolkit==3.0.51
-psutil==5.9.0
-pycairo==1.20.1
-pycryptodomex==3.11.0
-PyJWT==2.3.0
-PyNaCl==1.5.0
-pyparsing==2.4.7
-python-dateutil==2.9.0.post0
-python-magic==0.4.24
-pytz==2022.1
-PyYAML==5.4.1
-qrcode==7.3.1
-redis==6.4.0
-reportlab==3.6.8
-requests==2.25.1
-requests-file==1.5.1
-setproctitle==1.2.2
-six==1.16.0
-soupsieve==2.3.1
-sqlparse==0.5.3
-tldextract==3.1.2
-typing_extensions==4.14.1
-tzdata==2025.2
-Unidecode==1.3.3
-urllib3==1.26.5
+celery==5.3.6
+redis==5.0.1
+amqp==5.2.0
+billiard==4.2.0
+kombu==5.3.0
 vine==5.1.0
-wcwidth==0.2.13
-websockets==9.1
-yt-dlp==2022.4.8
-zipp==1.0.0
+
+beautifulsoup4==4.12.3
+requests==2.31.0
+urllib3==2.2.1
+certifi==2024.6.2
+idna==3.6
+chardet==5.2.0
+
+Pillow==10.3.0
+qrcode==7.4.2
+reportlab==4.2.0
+
+sqlparse==0.5.1
+tzdata==2024.1
+typing_extensions==4.12.2
