--- a/requirements.txt
+++ b/requirements.txt
@@ -1,23 +1,9 @@
-Django==5.0.6
-django-jazzmin==3.0.1
-celery==5.3.6
-redis==5.0.1
-amqp==5.2.0
-billiard==4.2.0
-kombu==5.3.0
-vine==5.1.0
-
-beautifulsoup4==4.12.3
-requests==2.31.0
-urllib3==2.2.1
-certifi==2024.6.2
-idna==3.6
-chardet==5.2.0
-
-Pillow==10.3.0
-qrcode==7.4.2
-reportlab==4.2.0
-
-sqlparse==0.5.1
-tzdata==2024.1
-typing_extensions==4.12.2
+Django>=5.0
+django-jazzmin>=3.0.1
+celery>=5.3
+redis>=5.0
+Pillow>=10.3.0
+requests>=2.31.0
+beautifulsoup4>=4.12.3
+qrcode>=7.4
+reportlab>=4.2.0
